--- a/week2/Algorithm/index.html
+++ b/week2/Algorithm/index.html
@@ -12,6 +12,11 @@
             margin-top: 20px;
 
         }
+        label{
+            border-color: red;
+            border-style: solid;
+          
+        }
     </style>
 </head>
 
@@ -33,11 +38,16 @@
 
         <script>
             //1. รับ input เป็นตัวเลขจำนวนเต็ม a และ b จากนั้นให้ output ผลรวมของตัวเลขทั้ง 2 จำนวนออกทางจอภาพ
+            $('label').hide();
+            function show(){
+                $('label').show()
+              }
             function no1() {
 
                 let a = parseInt(prompt())
                 let b = parseInt(prompt())
                 $("#1").html(a + b);
+                show()
             }
             function no2() {
                 let a = parseInt(prompt('คะแนนเก็บของนักเรียน'))
@@ -45,7 +55,11 @@
                 let c = parseInt(prompt('คะแนนสอบปลายภาคของนักเรียน'))
                 const i=a+b+c
 
-                (i>=80) ? "a"
+               let x = (i>=80) ? "4.00" : (i>=75) ? "3.5" :(i>=70) ? "3.0" : i>=65 ? "2.5" :
+                (i>=60) ? '2.0' : i>=55 ?'1.5' : '1.0'    
+                $('#2').html(x)
+                show()
+              console.log(x)
 
 
             }
