--- a/week4/Basic React Day 1/my-app/public/index.html
+++ b/week4/Basic React Day 1/my-app/public/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <style>
-      
+
     </style>
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -33,7 +33,10 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div id="rb"></div>
+   
     <div id="gogo"></div>
+
 
     <!--
       This HTML file is a template.
