--- a/week4/Basic React Day 1/my-app/public/index.html
+++ b/week4/Basic React Day 1/my-app/public/index.html
@@ -34,6 +34,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <div id="rb"></div>
+    <div id="love"></div>
    
     <div id="gogo"></div>
 
